--- a/Resolução dos Exercícios/Front-End Dom e Eventos/index.html
+++ b/Resolução dos Exercícios/Front-End Dom e Eventos/index.html
@@ -22,13 +22,13 @@
 
         <br><br>
 
-        <label for="CaracterCasa">Selecione uma característica da casa escolhida:</label><br>
+        <label for="CaracterCasa">Selecione uma característica:</label><br>
         <select id="CaracterCasa" name="CaracterCasa">
         </select>
 
         <br><br>
 
-        <label for="PersonaCasa">Sabe de algum personagem que pereteça a essa casa?</label><br>
+        <label for="PersonaCasa">Digite o nome de um personagem que pertença a essa casa:</label><br>
         <input type="text" id="PersonaCasa">
 
         <button type="button" id="btnEnviar">Enviar</button>
@@ -36,7 +36,7 @@
 
     <br><br>
 
-    <div id="RecebeInf"></div>
+    <div id="divRecebeInf"></div>
 
     <script src="index.js"></script>
 </body>
